# statsquest-book-codes

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
chapter_01/: chapter_01_py.ipynb
chapter_02/: chapter_02_py.ipynb
chapter_03/: chapter_03_py.ipynb
chapter_05/: chapter_05_py.ipynb
chapter_06/: chapter_06_py.ipynb
chapter_07/: chapter_07_py.ipynb
chapter_08/: chapter_08_py.ipynb
chapter_09/: chapter_09_py.ipynb
chapter_10/: chapter_10_py.ipynb
chapter_11/: chapter_11_py.ipynb
