[project]
name = "statsquest-book-codes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiml-py-common-utils>=0.0.3",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "statistics>=1.0.3.5",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]
